[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/charecters/Gunner_Red_Idle.png" type="Texture" id=1]
[ext_resource path="res://scenes/player/player1.gd" type="Script" id=2]
[ext_resource path="res://assets/healthbar/EntityHealthbar.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/overlap/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/overlap/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/healthbar/EntityHealthbar.gd" type="Script" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=7]

[sub_resource type="CapsuleShape2D" id=8]
radius = 16.5948
height = 38.9274

[node name="player1" type="KinematicBody2D"]
position = Vector2( 227, 91 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 6 )
animation = "Idle"
frame = 1
speed_scale = 1.3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="EntityHealthbar" parent="." instance=ExtResource( 3 )]
margin_left = -102.783
margin_top = -10.0113
margin_right = -62.7827
margin_bottom = 29.9887
rect_scale = Vector2( 2, 2 )
script = ExtResource( 6 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 7 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2( 1.5, 1.5 )
shape = SubResource( 8 )

[node name="BulletPoint" type="Node2D" parent="."]
position = Vector2( 34.8299, -3.97298 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="died" from="." to="." method="_on_player1_died"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
